@@ -1,5 +1,9 @@
 2025-09-10  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (+straight-update-and-review): New command.
+
+2025-09-10  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/gptel-config.el (gptel-menu): Add suffix "a"
 	gptel-abort.
 
